# routes/trainerRoutes.js
@@ -26,6 +26,8 @@ router.get(
   trainerCtrl.listByCity
 );
 
+router.delete('/:id', trainerController.deleteTrainerById);
+
 // Get your own trainer profile
 router.get(
   '/me',
